--- a/src/App.css
+++ b/src/App.css
@@ -144,6 +144,7 @@ body {
   padding-left: 10px;
   overflow-x: hidden;
   background-color: #F5F5F6;
+  width: 100%;
 }
 
 .note-card-tag {
@@ -158,6 +159,7 @@ body {
   letter-spacing: 0.6px;
   white-space: nowrap;
   text-transform: uppercase;
+  margin: 15px;
 }
 
 .note-card-content {
@@ -251,8 +253,10 @@ body {
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
   position: relative;
   font-family: 'Roboto', sans-serif;
-  width: 100%;
+  width: 75%;
   height: auto;
+  background-color: #FFFEA5;
+  margin-left: 30px;
 }
 
 .note-form {
@@ -490,7 +494,7 @@ body {
   align-items: flex-start;
   justify-content: center;
   flex-direction: row;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   height: auto;
   padding-top: 15px;
 }
